Use Split on Firefox Products page, fix layout [#10341]

--- a/media/css/firefox/browsers-products.scss
+++ b/media/css/firefox/browsers-products.scss
@@ -107,6 +107,10 @@ main .mzp-l-content {
     p {
         @include text-body-lg;
     }
+
+    &.t-products {
+        padding-top: 0;
+    }
 }
 
 //* -------------------------------------------------------------------------- */
